--- a/app.config
+++ b/app.config
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <system.web>
-      <compilation defaultLanguage="c#" debug="true" />
-  </system.web>
-  <appSettings>
-    <add key="countoffiles" value="7" />
-    <add key="logfilelocation" value="abc.txt" />
-  </appSettings>
+ <appSettings>
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="Environment" value="Production" />
+ </appSettings>
 </configuration>
